# 2D_game_engine

./: .gitignore  compile.sh
src/: CMakeLists.txt  Makefile  init.lua
src/assets/entities/: hero.lua
src/assets/scripts/: atlases.lua  test_animated.lua  test_components.lua  test_render.lua  test_transform.lua
src/cpp/: #PhysicsSystem.cpp#  #main.cpp#  AnimatedComponent.cpp  Application.cpp  CommandComponent.cpp  ComponentHandler.cpp  EntityHandler.cpp  EventHandler.cpp  FileManager.cpp  GameEngine.cpp  MotionComponent.cpp  MotionPhysicsComponent.cpp  PhysicsSystem.cpp  RenderComponent.cpp  RenderSystem.cpp  ServiceLocator.cpp  TextureHandler.cpp  TransformComponent.cpp  Vector2D.cpp  main.cpp
src/data/: test_o.txt
src/inc/: AnimatedComponent.hpp  Application.hpp  CommandComponent.hpp  CommandSystem.hpp  Component.hpp  ComponentHandler.hpp  EntityHandler.hpp  EventHandler.hpp  FileManager.hpp  GameEngine.hpp  Geometry.hpp  InputComponent.hpp  InputSystem.hpp  Lua.hpp  Matrix2D.hpp  MotionComponent.hpp  MotionPhysicsComponent.hpp  PhysicsSystem.hpp  RenderComponent.hpp  RenderSystem.hpp  ServiceLocator.hpp  SmartMap.hpp  System.hpp  SystemHandler.hpp  TextureHandler.hpp  TransformComponent.hpp  Vector2D.hpp
src/tests/: FileManagerTests.cpp  TransformComponentTest.cpp
